@@ -1,3 +1,12 @@
+2012-08-06  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>
+
+        [EFL] EFL's LayoutTestController needs removeAllVisitedLinks implementation
+        https://bugs.webkit.org/show_bug.cgi?id=82724
+
+        Reviewed by Csaba Osztrogonác.
+
+        * platform/efl/Skipped:
+
 2012-08-06  Shinya Kawanaka  <shinyak@chromium.org>
 
         AuthorShadowDOM for progress element
